--- a/scripts/index/makefile
+++ b/scripts/index/makefile
@@ -1,7 +1,19 @@
-CP=.:/home/thierry/lucene/lucene-6.3.0/core/*:/home/thierry/lucene/lucene-6.3.0/queryparser/*:/home/thierry/lib/*
+LIBDIR=/home/thierry/lucene/lucene-6.3.0
+CP=.:${LIBDIR}/core/*:${LIBDIR}/queryparser/*:${LIBDIR}/analysis/common/*:/home/thierry/lib/*
 
-index.class: index.scala
-	scalac -classpath ${CP} index.scala
+index.class: index.scala HighlightTokenizer.class HighlightTokenStreamFilter.class HighlightAnalyzer.class
+	scalac -classpath ${CP} $<
 
-run: index.class
-	scala -J-Xmx10g -classpath ${CP} index /home/thierry/tmp/index
+HighlightTokenizer.class: HighlightTokenizer.scala
+	scalac -classpath ${CP} $<
+
+HighlightTokenStreamFilter.class: HighlightTokenStreamFilter.scala
+	scalac -classpath ${CP} $<
+
+HighlightAnalyzer.class: HighlightAnalyzer.scala HighlightTokenStreamFilter.class
+	scalac -classpath ${CP} $<
+
+run: build
+	scala -J-Xmx24g -classpath ${CP} index /home/thierry/tmp/index
+
+build: index.class
