--- a/scripts/index/makefile
+++ b/scripts/index/makefile
@@ -1,7 +1,10 @@
 LIBDIR=/home/thierry/lucene/lucene-6.3.0
 CP=.:${LIBDIR}/core/*:${LIBDIR}/queryparser/*:${LIBDIR}/analysis/common/*:/home/thierry/lib/*
 
-index.class: index.scala HighlightTokenizer.class HighlightTokenStreamFilter.class HighlightAnalyzer.class
+index.class: index.scala HighlightTokenizer.class HighlightTokenStreamFilter.class HighlightAnalyzer.class PartOfSpeechTokenStreamFilter.class
+	scalac -classpath ${CP} $<
+
+indexWithAbstract.class: indexWithAbstract.scala HighlightTokenizer.class HighlightTokenStreamFilter.class HighlightAnalyzer.class PartOfSpeechTokenStreamFilter.class
 	scalac -classpath ${CP} $<
 
 HighlightTokenizer.class: HighlightTokenizer.scala
@@ -10,13 +13,19 @@ HighlightTokenizer.class: HighlightTokenizer.scala
 HighlightTokenStreamFilter.class: HighlightTokenStreamFilter.scala
 	scalac -classpath ${CP} $<
 
+PartOfSpeechTokenStreamFilter.class: PartOfSpeechTokenStreamFilter.scala
+	scalac -classpath ${CP} $<
+
 HighlightAnalyzer.class: HighlightAnalyzer.scala HighlightTokenStreamFilter.class
 	scalac -classpath ${CP} $<
 
 run: build
 	scala -J-Xmx24g -classpath ${CP} index /home/thierry/tmp/index
 
-build: index.class show.class reader.class
+runabs: build
+	scala -J-Xmx24g -classpath ${CP} indexWithAbstract /home/thierry/tmp/index-with-abstract
+
+build: index.class show.class reader.class indexWithAbstract.class
 
 show.class: show.scala index.class
 	scalac -classpath ${CP} $<
